@@ -13,6 +13,7 @@ ikiwiki (3.20110716) UNRELEASED; urgency=low
     regexp blowup.
   * Fix escaping of html entities in permalinks.
   * Fix escaping of html entities in tag names.
+  * Avoid using named capture groups in heredoc code for oldperl compatability.
 
  -- Joey Hess <joeyh@debian.org>  Tue, 19 Jul 2011 11:22:52 -0400
 
